--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -376,5 +376,9 @@
   "Fullscreen_SaveImage_Tooltip": "Сохранить изображение (NumPad 5)",
   "Fullscreen_SaveImage_ResaveTooltip": "Изображение сохранено (Удерживайте Ctrl, чтобы пересохранить)",
   "UIConstructor_Seed_AllowNegative": "Разрешить отрицательные",
-  "UIConstructor_Seed_MaxValue": "Макс. значение:"
+  "UIConstructor_Seed_MaxValue": "Макс. значение:",
+  "XYGrid_Mode": "Режим грида:",
+  "XYGrid_ModeImage": "Изображение",
+  "XYGrid_ModeVideo": "Видео (сториборд)",
+  "XYGrid_FrameCount": "Кадров для извлечения:"
 }
