--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -34,8 +34,8 @@
   "Tab_ToggleInfiniteQueue": "Toggle Infinite Queue (Queue another batch when the current one is finished)",
   "Tab_CompletedTasks": "Completed: {0}/{1}",
   "Tab_SelectedItems": "Selected:",
-  "Tab_SaveSelected": "Save Selected",
-  "Tab_DeleteSelected": "Delete Selected",
+  "Tab_SaveSelected": "Save",
+  "Tab_DeleteSelected": "Delete",
   "Tab_ClearResults": "Clear results",
   "Tab_ClearFilteredResults": "Clear filtered results",
   "Tab_NoWorkflowSelected": "Select a workflow to get started",
