--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -34,8 +34,8 @@
   "Tab_ToggleInfiniteQueue": "Включить бесконечную очередь (добавлять новую пачку задач после завершения текущей)",
   "Tab_CompletedTasks": "Завершено: {0}/{1}",
   "Tab_SelectedItems": "Выделено:",
-  "Tab_SaveSelected": "Сохранить выделенное",
-  "Tab_DeleteSelected": "Удалить выделенное",
+  "Tab_SaveSelected": "Сохранить",
+  "Tab_DeleteSelected": "Удалить",
   "Tab_ClearFilteredResults": "Очистить отфильтрованные результаты",
   "Tab_NoWorkflowSelected": "Выберите рабочий процесс, чтобы начать",
   "Console_Title": "Консоль",
