--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -301,6 +301,8 @@
   "XYGrid_YValues": "Y values (one per line):",
   "XYGrid_CreateGridImage": "Create grid image",
   "XYGrid_ShowIndividualImages": "Show individual images",
+  "XYGrid_LimitCellSize": "Limit cell size",
+  "XYGrid_MaxMegapixels": "Max Megapixels:",
   "UIConstructor_Field_UsePrefix": "Prefix",
   "UIConstructor_Field_UsePrefixTooltip": "Prefix field names with node titles",
   "Tab_GallerySortSimilarity": "Similarity",
