--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -258,6 +258,7 @@
   "UIConstructor_Hook_on_before_prompt_queue": "Before prompt is queued",
   "UIConstructor_Hook_on_batch_finished": "After batch is finished",
   "Presets_ManageTooltip": "Manage Presets",
+  "Presets_AddNewGlobal": "Add Preset",
   "Presets_LoadPlaceholder": "Load Preset...",
   "Presets_SaveCurrentState": "Save Current State",
   "Presets_SaveButton": "Save",
