Squashed commit of the following:
commit 27097b64dd03045bf8693490d56b11c5a8d95ca0
Author: bananasss00 <bananasss00@yandex.ru>
Date:   Mon Nov 10 23:35:49 2025 +0300

    final fix style undoccked-docked

commit 7593ab88be725eddedd7b5ad901c581773d5cbc0
Author: bananasss00 <bananasss00@yandex.ru>
Date:   Mon Nov 10 23:33:21 2025 +0300

    style 2

commit a382172bf2bb5a6c831b62480e53c8e3d46d2f8d
Author: bananasss00 <bananasss00@yandex.ru>
Date:   Mon Nov 10 23:20:45 2025 +0300

    color tab 2

commit 5fddb5e98d159c95182176f523c432e93a75ceb9
Author: bananasss00 <bananasss00@yandex.ru>
Date:   Mon Nov 10 23:08:27 2025 +0300

    fix styles

commit 74becb92c418f20a3383d9d533dacbe68025f1ae
Author: bananasss00 <bananasss00@yandex.ru>
Date:   Mon Nov 10 23:01:23 2025 +0300

    tab_style

commit 14e21b38d1ad516e0599799275ca59c6d86f8eaa
Author: bananasss00 <bananasss00@yandex.ru>
Date:   Mon Nov 10 22:43:33 2025 +0300

    colorize tabs

commit efe8136eea297a7f2ad6d7e4cb1660c74307238a
Author: rdp <rdp>
Date:   Mon Nov 10 17:35:48 2025 +0300

    translations

commit 154e7a0d87d3b782dd5c493a71d1f0d5a562087f
Author: rdp <rdp>
Date:   Mon Nov 10 17:28:02 2025 +0300

    fix MarkdownDisplay in tabs

commit ab91a0c771000188ae7f129f5c1af35ab2aa3316
Author: rdp <rdp>
Date:   Mon Nov 10 17:23:58 2025 +0300

    fix migration and styles

commit 16e09b3246b23c2339cfe5c49efb35c003610638
Author: rdp <rdp>
Date:   Mon Nov 10 16:36:58 2025 +0300

    fix rename

commit 12e78a3f9bbda05fcd32df0dc2e512fd58da8f56
Author: rdp <rdp>
Date:   Mon Nov 10 16:34:12 2025 +0300

    style fixes

commit 5e9f4b86f00b63d9415954df83e15d95460279bb
Author: rdp <rdp>
Date:   Mon Nov 10 15:46:10 2025 +0300

    fix rename focus & need fix not save bug

commit 4d2da34e9420d826de3a3cadc69724f3df32f51c
Author: rdp <rdp>
Date:   Mon Nov 10 15:41:09 2025 +0300

    tabs style

commit c8f479afce72030a647d0b4fce4a3db4043885c7
Author: rdp <rdp>
Date:   Mon Nov 10 14:19:40 2025 +0300

    work tabs

commit 1b814b6d20

--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -11,6 +11,8 @@
   "UIConstructor_NewTabDefaultName": "New Tab",
   "UIConstructor_ConfirmDeleteTabTitle": "Confirmation",
   "UIConstructor_ConfirmDeleteTabMessage": "Are you sure you want to delete the tab '{0}'? All groups from this tab will become unassigned.",
+  "UIConstructor_AddSubTab": "Add Tab",
+  "UIConstructor_RemoveSubTab": "Remove Tab",
   "FilterableComboBox_Placeholder": "Select or find a workflow...",
   "Tab_Outputs": "Outputs",
   "Tab_WildcardSeed": "Wildcard Seed",
