--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -273,7 +273,7 @@
   "Presets_SelectAll": "Select All",
   "Presets_DeselectAll": "Deselect All",
   "GlobalPresets_Header": "Global Presets",
-  "GlobalPresets_Label": "Apply Preset:",
+  "GlobalPresets_Label": "Global Presets",
   "Tab_PauseQueue": "Pause the queue (current task will finish)",
   "Tab_ResumeQueue": "Resume the queue",
   "Tab_InterruptGeneration": "Interrupt generation on server",
@@ -396,5 +396,6 @@
   "UIConstructor_Preset_Tooltip": "Select range preset",
   "UIConstructor_Preset_SearchPlaceholder": "Search presets...",
   "UIConstructor_Preset_ShowAll": "Show all types",
-  "UIConstructor_Field_ItemsTooltip": "Enter items, one per line.\nTo separate Display Name and API Value use ' :: '.\nExample: 'Nice Name :: api_value'\nIf no separator is used, the name will equal the value."
+  "UIConstructor_Field_ItemsTooltip": "Enter items, one per line.\nTo separate Display Name and API Value use ' :: '.\nExample: 'Nice Name :: api_value'\nIf no separator is used, the name will equal the value.",
+  "Presets_Category_General": "General"
 }
