save images to root setting

--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -397,5 +397,7 @@
   "UIConstructor_Preset_SearchPlaceholder": "Search presets...",
   "UIConstructor_Preset_ShowAll": "Show all types",
   "UIConstructor_Field_ItemsTooltip": "Enter items, one per line.\nTo separate Display Name and API Value use ' :: '.\nExample: 'Nice Name :: api_value'\nIf no separator is used, the name will equal the value.",
-  "Presets_Category_General": "General"
+  "Presets_Category_General": "General",
+  "Settings_SaveImagesFlat": "Save files to root folder (ignore subdirectories)",
+  "Settings_SaveImagesFlatTooltip": "If checked, all images will be saved directly to the Save Directory without creating subfolders based on node categories."
 }
