--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -398,5 +398,11 @@
   "UIConstructor_Field_ItemsTooltip": "Введите значения, каждое с новой строки.\nДля разделения имени и значения API используйте ' :: '.\nПример: 'Красивое имя :: api_value'\nЕсли разделителя нет, имя будет равно значению.",
   "Presets_Category_General": "Общее",
   "Settings_SaveImagesFlat": "Сохранять файлы в корень (игнорировать подпапки)",
-  "Settings_SaveImagesFlatTooltip": "Если отмечено, все изображения будут сохраняться прямо в указанную папку сохранения без создания вложенных папок по категориям."
+  "Settings_SaveImagesFlatTooltip": "Если отмечено, все изображения будут сохраняться прямо в указанную папку сохранения без создания вложенных папок по категориям.",
+  "GlobalPresets_ConfigurationHeader": "Конфигурация групп и состояний",
+  "GlobalPresets_IncludeTooltip": "Включить эту группу в глобальный пресет",
+  "GlobalPresets_NoPresets": "Нет активных пресетов",
+  "GlobalPresets_HelpText": "Выберите, какие группы затронет этот пресет и в какое состояние (локальный пресет) они должны перейти.",
+  "GlobalPresets_GroupColumn": "Группа",
+  "GlobalPresets_PresetColumn": "Состояние (Пресет)"
 }
