--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -415,5 +415,8 @@
   "Presets_Info_Category": "Категория:",
   "Presets_Info_Tags": "Теги:",
   "GlobalPresets_CreateSnapshot": "Создать снапшот во всех группах",
-  "GlobalPresets_CreateSnapshotTooltip": "Автоматически создать локальный пресет с этим именем в КАЖДОЙ группе, сохранив все текущие значения."
+  "GlobalPresets_CreateSnapshotTooltip": "Автоматически создать локальный пресет с этим именем в КАЖДОЙ группе, сохранив все текущие значения.",
+  "ContextMenu_ClearPresets": "Очистить пресеты",
+  "UIConstructor_ConfirmClearPresetsMessage": "Вы уверены, что хотите удалить все пресеты для группы '{0}'? Это полезно, если изменился API.",
+  "UIConstructor_PresetsClearedMessage": "Все пресеты для группы '{0}' очищены."
 }
