filepath slash style arg, translations

--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -330,6 +330,10 @@
   "UIConstructor_CopyPresets": "Copy Presets",
   "UIConstructor_PastePresets": "Paste Presets",
   "UIConstructor_PasteMergePresets": "Paste & Merge Presets",
+  "UIConstructor_EditTooltipTooltip": "Edit Tooltip",
+  "UIConstructor_ToggleNodePrefixTooltip": "Toggle node title prefix",
+  "UIConstructor_Field_SlashStyle": "Path slash style:",
+  "Settings_ShowUndoRedoButtons": "Show Undo/Redo buttons in text fields",
   "GroupNavigation_SearchPlaceholder": "Search by group name...",
   "ContextMenu_ExportPresets": "Export Presets",
   "ContextMenu_ImportPresets": "Import Presets",
