--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -329,6 +329,10 @@
   "UIConstructor_CopyPresets": "Копировать пресеты",
   "UIConstructor_PastePresets": "Вставить пресеты",
   "UIConstructor_PasteMergePresets": "Вставить и объединить пресеты",
+  "UIConstructor_EditTooltipTooltip": "Редактировать подсказку",
+  "UIConstructor_ToggleNodePrefixTooltip": "Переключить префикс с названием ноды",
+  "UIConstructor_Field_SlashStyle": "Стиль слеша в пути:",
+  "Settings_ShowUndoRedoButtons": "Показывать кнопки Отменить/Повторить в текстовых полях",
   "GroupNavigation_SearchPlaceholder": "Поиск по названию группы...",
   "ContextMenu_ExportPresets": "Экспорт пресетов",
   "ContextMenu_ImportPresets": "Импорт пресетов",
