--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -333,6 +333,17 @@
   "UIConstructor_ToggleNodePrefixTooltip": "Toggle node title prefix",
   "UIConstructor_Field_SlashStyle": "Path slash style:",
   "Settings_ShowUndoRedoButtons": "Show Undo/Redo buttons in text fields",
+  "AutoLayout_Button": "Auto-Layout",
+  "AutoLayout_Tooltip": "Automatically create groups and assign all available fields.",
+  "AutoLayout_PopupTitle": "Auto-Layout Options",
+  "AutoLayout_Description": "This will process all unassigned fields and organize them into new or existing groups on the current tab.",
+  "AutoLayout_SortBy": "Sort fields by:",
+  "AutoLayout_SortBy_Api": "API Order",
+  "AutoLayout_SortBy_Alphabetical": "Alphabetical",
+  "AutoLayout_SortBy_Type": "Value Type",
+  "AutoLayout_IncludeNodeId": "Include node ID in group title",
+  "AutoLayout_StripPrefix": "Strip 'Node::' prefix from field names",
+  "AutoLayout_RunButton": "Run Auto-Layout",
   "GroupNavigation_SearchPlaceholder": "Search by group name...",
   "ContextMenu_ExportPresets": "Export Presets",
   "ContextMenu_ImportPresets": "Import Presets",
