--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -332,6 +332,17 @@
   "UIConstructor_ToggleNodePrefixTooltip": "Переключить префикс с названием ноды",
   "UIConstructor_Field_SlashStyle": "Стиль слеша в пути:",
   "Settings_ShowUndoRedoButtons": "Показывать кнопки Отменить/Повторить в текстовых полях",
+  "AutoLayout_Button": "Авто-разметка",
+  "AutoLayout_Tooltip": "Автоматически создать группы и распределить все доступные поля.",
+  "AutoLayout_PopupTitle": "Настройки авто-разметки",
+  "AutoLayout_Description": "Это обработает все нераспределенные поля и организует их в новые или существующие группы на текущей вкладке.",
+  "AutoLayout_SortBy": "Сортировать поля по:",
+  "AutoLayout_SortBy_Api": "Порядку в API",
+  "AutoLayout_SortBy_Alphabetical": "Алфавиту",
+  "AutoLayout_SortBy_Type": "Типу значения",
+  "AutoLayout_IncludeNodeId": "Включать ID ноды в заголовок группы",
+  "AutoLayout_StripPrefix": "Убирать префикс 'Нода::' из имен полей",
+  "AutoLayout_RunButton": "Запустить",
   "GroupNavigation_SearchPlaceholder": "Поиск по названию группы...",
   "ContextMenu_ExportPresets": "Экспорт пресетов",
   "ContextMenu_ImportPresets": "Импорт пресетов",
