--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -440,5 +440,6 @@
   "Gallery_SaveAsWebp": "Сохранить как WebP",
   "Gallery_SaveFormat": "Сохранить",
   "Gallery_SaveFormatAs": "Сохранить как...",
-  "Gallery_SaveGridElements": "Сохранить элементы грида"
+  "Gallery_SaveGridElements": "Сохранить элементы грида",
+  "ContextMenu_DuplicateTab": "Дублировать вкладку"
 }
