--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -38,6 +38,9 @@
   "Tab_ClearResults": "Clear results",
   "Tab_ClearFilteredResults": "Clear filtered results",
   "Tab_NoWorkflowSelected": "Select a workflow to get started",
+  "Gallery_Tooltip_Parameters": "Generation Parameters",
+  "Tab_SaveQueue": "Save current queue to file",
+  "Tab_ImportQueue": "Import queue from file",
   "Console_Title": "Console",
   "Console_Copy": "Copy console content",
   "Console_Clear": "Clear console",
