--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -37,6 +37,9 @@
   "Tab_DeleteSelected": "Удалить",
   "Tab_ClearFilteredResults": "Очистить отфильтрованные результаты",
   "Tab_NoWorkflowSelected": "Выберите рабочий процесс, чтобы начать",
+  "Gallery_Tooltip_Parameters": "Параметры генерации",
+  "Tab_SaveQueue": "Сохранить текущую очередь в файл",
+  "Tab_ImportQueue": "Импортировать очередь из файла",
   "Console_Title": "Консоль",
   "Console_Copy": "Копировать содержимое консоли",
   "Console_Clear": "Очистить консоль",
